2013-10-03  Sancho Lerena <slerena@artica.es>
	
	* operation/invoices/invoice_detail.php,
        operation/companies/company_detail.php: Showing tooltip with
	total including tax and adding format_numeric to output.

	* operation/invoices/invoice_detail.php: Removed column with
	secondary invoice status / optional payment date. Put currency in
	other column (easy to cyt/paste to excel). Added a niiiiiiiiice
        summatory at the bottom, with the "totals" per currency.

	* operation/invoices/invoice_template.php: Adjusted column 
	width on long strings. Added a fancy "PAID" text on the header
	if it's already paid.

	* operation/companies/company_detail.php: Fixed creation
	when fiscal ID was not numeric. Now is a string (SQL Insert).

2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/filemgr.php: Now the file manager shows correctly
	the mime types and the image properties. Now the directories
	appear before the rest of the files, sorted alphabetically like
	the files.
	
2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_graph.php,
	  operation/incidents/incident_search_logic.php,
	  operation/incidents/incident_statistics.php: Now the offset
	  are keeped when changing between the incident tabs and when
	  the page is autorefreshed.
	
2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_incidents.php: Sorted some arrays and fixed
	some URLs in the function "print_incidents_stats".
	
2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/invoices/invoice_detail.php: Now is possible to
	filter the results by the invoice status. Fixed the 'to' filter.
	Deleted the column 'description'. Now the offset are keeped when
	an invoice is unlocked/locked or deleted and when a new search
	is done.
	
2013-10-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_crm.php: Fixed an error on the function