@@ -1,3 +1,8 @@
+2013-10-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* operation/users/user_edit.php: Some changes and fixes on the
+	avatar upload control of the user edit section.
+	
 2013-10-03  Sancho Lerena <slerena@artica.es>
 	
 	* operation/invoices/invoice_detail.php,
